# ansible-role-docker

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  pyproject.toml  requirements.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml  prepare.yml  verify.yml
tasks/: main.yml
vars/: main.yml
