[tool.poetry]
name = "artis3n.docker"
version = "1.3.4"
description = ""
authors = ["Ari Kalfus <dev@artis3nal.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^5.7.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"
ansible-lint = "^6.5.1"
molecule = {extras = ["docker"], version = "^3.6.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
