[tool.poetry]
name = "artis3n.docker"
version = "2.0.0"
description = ""
authors = ["Ari Kalfus <dev@artis3nal.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^8.2.0"

[tool.poetry.dev-dependencies]
pre-commit = "^3.2.2"
ansible-lint = "^6.4.0"
molecule = {extras = ["docker"], version = "^4.0.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
